redactable/tests/ui/not_sensitive_display_union_rejected.stderr
error: `NotSensitiveDisplay` cannot be derived for unions
 --> tests/ui/not_sensitive_display_union_rejected.rs:4:1
  |
4 | union PublicDisplayUnion {
  | ^^^^^
