redactable/tests/ui/not_sensitive_display_union_rejected.rs
use redactable::NotSensitiveDisplay;

#[derive(NotSensitiveDisplay)]
union PublicDisplayUnion {
    value: u32,
}

fn main() {}
